# rust_testcases

./: .gitignore  README.md
testcases/101_hello_world/src/: main.rs
testcases/104_vector/: Cargo.toml
testcases/201_rstest/: Cargo.toml  README.md
testcases/201_rstest/src/: lib.rs  main.rs
testcases/202_serde_json/: Cargo.toml
testcases/202_serde_json/src/banana/: mod.rs
testcases/301_deploy/: Cargo.toml  README.md
testcases/302_python_interop_pyo3/: README.md
testcases/302_python_interop_pyo3/my_python_module/: Cargo.toml  pyproject.toml
testcases/302_python_interop_pyo3/my_python_module/src/: lib.rs
testcases/302_writting_python_module_pyo3/: README.md
testcases/case102_module/tests/: mytest.rs
testcases/case103_string/: README.md
testcases/case104_vector/tests/: vector.rs
testcases/case201_rstest/: Cargo.toml  README.md
testcases/case201_rstest/src/: main.rs  sample_rstest.rs
testcases/case201_rstest/src/mult/: mod.rs
testcases/case202_serde_json/: README.md
testcases/case202_serde_json/src/: lib.rs
testcases/case203_anyhow_and_thiserror/: Cargo.toml  README.md
testcases/case203_anyhow_and_thiserror/src/: main.rs  moonlight.rs  sunshine.rs
testcases/case301_deploy/: .dockerignore  Dockerfile
testcases/case302_writting_python_module_pyo3/my_python_module/: test.py
testcases/testcase101_hello_world/: Cargo.toml  README.md
testcases/testcase101_hello_world/tests/: hello.rs
testcases/testcase102_module/: Cargo.toml
testcases/testcase103_string/: Cargo.toml
testcases/testcase103_string/tests/: string_and_string_slice.rs
(+1 files in other folders)
