[package]
name = "my_web_server"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
thiserror = "1.0.64"
regex = "1.11.0"
futures = "0.3"
chrono = {version = "*", features = ["serde"] }
rand = "*"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "alloc"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
serde_with = "3.11.0"
http-body-util = "0.1.2"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace"] }
axum = { version = "0.7.7", features = [
    "http1",
    "http2",
    "json",
    "matched-path",
    "ws",
    "macros",
    "tower-log"
] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
tokio = { version = "1.40.0", features = ["full"] }
sqlx = { version = "0.8", features = [
    "chrono",
    "postgres",
    "runtime-tokio"
] }
openmls = "0.5.0"

[dev-dependencies]
rstest = "0.23.0"
httpmock = "0.7.0"
isahc = "1.7.2"